--- a/fairytale/BGImage_maker.ipynb
+++ b/fairytale/BGImage_maker.ipynb
@@ -17,10 +17,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LYpXkrRweS8U",
-        "outputId": "2f4e70a9-5d34-457c-abba-0b1a4968862c",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "2f4e70a9-5d34-457c-abba-0b1a4968862c"
       },
       "outputs": [
         {
@@ -112,10 +109,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1cljkrUaPeyg",
-        "outputId": "96b4432d-032b-4ffb-ce06-659bb3f95a2a",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "96b4432d-032b-4ffb-ce06-659bb3f95a2a"
       },
       "outputs": [
         {
@@ -193,10 +187,7 @@
           ]
         },
         "id": "2fhY8snQb5JA",
-        "outputId": "8a5d2c1e-b98a-4b07-d612-d30438580425",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "8a5d2c1e-b98a-4b07-d612-d30438580425"
       },
       "outputs": [
         {
@@ -446,10 +437,7 @@
           ]
         },
         "id": "CgqMhVqH4qo7",
-        "outputId": "cf290b9c-7ecb-4093-c701-e98e54abe057",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "cf290b9c-7ecb-4093-c701-e98e54abe057"
       },
       "outputs": [
         {
@@ -724,10 +712,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Z4qaL_uhb8tX",
-        "vscode": {
-          "languageId": "python"
-        }
+        "id": "Z4qaL_uhb8tX"
       },
       "outputs": [],
       "source": [
@@ -775,10 +760,7 @@
           ]
         },
         "id": "H39hVXhiPtBo",
-        "outputId": "5fe4d2a5-11ef-4f35-c09b-7643a53c838a",
-        "vscode": {
-          "languageId": "python"
-        }
+        "outputId": "5fe4d2a5-11ef-4f35-c09b-7643a53c838a"
       },
       "outputs": [
         {
@@ -835,7 +817,7 @@
         "app = Flask(__name__)\n",
         "run_with_ngrok(app)  # Start ngrok when app is run\n",
         "\n",
-        "addr = 'http://192.168.0.23:5001/getmessage'\n",
+        "addr = 'address/getmessage'\n",
         "\n",
         "@app.route(\"/gettext\", methods=['POST'])\n",
         "def getText():\n",
@@ -857,10 +839,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "BkdzhOPNrgh0",
-        "vscode": {
-          "languageId": "python"
-        }
+        "id": "BkdzhOPNrgh0"
       },
       "outputs": [],
       "source": []
